--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,11 @@
   <h1 class="font-bold text-4xl">Pages#home</h1>
   <p>Find me in app/views/pages/home.html.erb</p>
 
+    <% if current_user %>
+        <p>Logged in as <%= current_user.email %></p>
+        
+        <%= link_to 'Start a new chat', chats_path, data: { turbo_method: :post }, class: "text-green-600 underline" %>
+      <% end %>
+
   
 </div>
