--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-bold text-4xl">Pages#home</h1>
+  <h1 class="font-bold text-4xl">Homepage</h1>
   <p>Find me in app/views/pages/home.html.erb</p>
 
     <% if current_user %>
